--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <th class="no-bottom-padding small-12 large-12 columns first last"><table><tr><th>
             <h3></h3>
             <table class="spacer"><tbody><tr><td height="10px" style="font-size:10px;line-height:10px;">&#xA0;</td></tr></tbody></table> 
-            <center data-parsed=""><table class="button radius warning expanded float-center"><tr><td><table><tr><td><center data-parsed=""><a href="https://www.voyagersopris.com/literacy/voyager-passport/contact-sales/?utm_source=news&amp;utm_medium=email&amp;utm_campaign=passport_launch" align="center" class="float-center"><strong>Watch your students soar with the updated<br><em>Voyager Passport</em> as part of your fall curriculum.</strong></a></center></td></tr></table></td>
+            <center data-parsed=""><table class="button radius warning expanded float-center"><tr><td><table><tr><td><center data-parsed=""><a href="https://www.voyagersopris.com/literacy/voyager-passport/contact-sales/?utm_source=news&amp;utm_medium=email&amp;utm_campaign=passport_launch" align="center" class="float-center"><strong>Watch your students soar with the updated<br><em>Voyager Passport</em> as part of your fall curriculum &raquo;</strong></a></center></td></tr></table></td>
 <td class="expander"></td></tr></table></center>
         </th>
 <th class="expander"></th></tr></table></th>
