--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <table align="center" class="container float-center"><tbody><tr><td>
     <table pardot-repeatable="" class="row collapse"><tbody><tr>
         <th class="no-bottom-padding small-12 large-12 columns first last" pardot-region="header_image"><table><tr><th>
-            <a href="https://www.voyagersopris.com/literacy/voyager-passport/contact-sales?utm_source=news&amp;utm_medium=email&amp;utm_campaign=passport_launch"><img src="https://go.voyagersopris.com/l/207592/2019-05-29/9j3k2/207592/105713/passport_non_customer.jpg" width="600" style="font-size: 24px;line-height:30px;background-color:#009bdf;color:#ffffff;text-align:center;" alt=""></a>
+            <a href="https://www.voyagersopris.com/literacy/voyager-passport/contact-sales?utm_source=news&amp;utm_medium=email&amp;utm_campaign=passport_launch"><img src="https://go.voyagersopris.com/l/207592/2019-05-29/9j44s/207592/105723/passport_non_customer.jpg" width="600" style="font-size: 24px;line-height:30px;background-color:#009bdf;color:#ffffff;text-align:center;" alt=""></a>
         </th></tr></table></th>
     </tr></tbody></table>
 
@@ -47,7 +47,7 @@
             <img src="https://go.voyagersopris.com/l/207592/2019-05-20/9hf3b/207592/104319/passport_logo.png" alt="Passport logo" width="200" class="passport-logo">
             <table class="spacer"><tbody><tr><td height="20px" style="font-size:20px;line-height:20px;">&#xA0;</td></tr></tbody></table> 
             <p><em>Voyager</em> <span class="no-wrap"><em>Passport</em><sup>&reg;</sup></span> easily integrates into
-                any core curriculum and</p>
+                any core curriculum, and:</p>
             <ul>
                 <li>Teaches five components of reading</li>
                 <li>Provides language and writing support</li>
