--- a/previous1.html
+++ b/previous1.html
@@ -25,48 +25,58 @@
 <table align="center" class="container float-center"><tbody><tr><td>
     <table pardot-repeatable="" class="row collapse"><tbody><tr>
         <th class="no-bottom-padding small-12 large-12 columns first last" pardot-region="header_image"><table><tr><th>
-            <a href="https://www.voyagersopris.com/literacy/voyager-passport/contact-sales?utm_source=news&amp;utm_medium=email&amp;utm_campaign=passport_launch"><img src="assets/img/passport-non-customer-banner-7-19.jpg" width="600" style="font-size: 24px;line-height:30px;background-color:#009bdf;color:#ffffff;text-align:center;" alt=""></a>
+            <a href="https://www.voyagersopris.com/literacy/voyager-passport/contact-sales?utm_source=news&amp;utm_medium=email&amp;utm_campaign=passport_launch"><img src="https://go.voyagersopris.com/l/207592/2019-05-29/9j44s/207592/105723/passport_non_customer.jpg" width="600" style="font-size: 24px;line-height:30px;background-color:#009bdf;color:#ffffff;text-align:center;" alt=""></a>
         </th></tr></table></th>
     </tr></tbody></table>
 
     <table pardot-repeatable="" class="row"><tbody><tr>
         <th class="small-12 large-12 columns first last" pardot-region="body_copy"><table><tr><th>
+            <table class="spacer"><tbody><tr><td height="20px" style="font-size:20px;line-height:20px;">&#xA0;</td></tr></tbody></table> 
 
-            <h1> Give your students everything<br class="hide-hardbreak"> they need in just <span class="emphasize">30
-                    MINUTES A DAY</span>.</h1>
+            <p class="text-center">Give your students everything they need in just <span class="emphasize">30
+                    MINUTES A DAY</span>.</p>
             <table class="spacer"><tbody><tr><td height="10px" style="font-size:10px;line-height:10px;">&#xA0;</td></tr></tbody></table> 
-            <center data-parsed=""><table class="button radius warning expanded float-center"><tr><td><table><tr><td><center data-parsed=""><a href="https://www.voyagersopris.com/literacy/voyager-passport/contact-sales/?utm_source=news&amp;utm_medium=email&amp;utm_campaign=passport_launch" align="center" class="float-center"><strong>SCHEDULE A PRESENTATION BY AUGUST 31 AND GET 10% OFF
+            <center data-parsed=""><table class="button radius warning expanded float-center"><tr><td><table><tr><td><center data-parsed=""><a href="https://www.voyagersopris.com/literacy/voyager-passport/contact-sales/?utm_source=news&amp;utm_medium=email&amp;utm_campaign=passport_launch" align="center" class="float-center"><strong>SAVE 10% WHEN YOU SCHEDULE A PRESENTATION NOW
                         »</strong></a></center></td></tr></table></td>
 <td class="expander"></td></tr></table></center>
         </th>
 <th class="expander"></th></tr></table></th>
     </tr></tbody></table>
     <table class="row"><tbody><tr>
-        <th class="small-12 large-12 columns first last"><table><tr><th>
-            <p>As you begin a new school year and learn each student’s strengths, you’ll encounter those who struggle to
-                read... and you’ll no doubt ask yourself how you can best help turn that struggle into success. </p>
+        <th class="no-bottom-padding small-12 large-6 columns first"><table><tr><th>
+            <img src="https://go.voyagersopris.com/l/207592/2019-05-20/9hf3b/207592/104319/passport_logo.png" alt="Passport logo" width="200" class="passport-logo">
+            <table class="spacer"><tbody><tr><td height="20px" style="font-size:20px;line-height:20px;">&#xA0;</td></tr></tbody></table> 
+            <p><em>Voyager</em> <span class="no-wrap"><em>Passport</em><sup>&reg;</sup></span> easily integrates into
+                any core curriculum, and:</p>
+            <ul>
+                <li>Teaches five components of reading</li>
+                <li>Provides language and writing support</li>
+                <li>Includes specific differentiation lessons to respond to students</li>
+                <li>Includes formative assessments, placement assessments, and embedded teacher support</li>
+            </ul>
+        </th></tr></table></th>
+        <th class="no-bottom-padding small-12 large-3 columns"><table><tr><th>
+            <img src="https://go.voyagersopris.com/l/207592/2019-05-29/9j3k4/207592/105715/icons_essa.png" class="passport-icons small-float-center" alt="essa evidence rating available icon" width="125">
+            <table class="spacer"><tbody><tr><td height="20px" style="font-size:20px;line-height:20px;">&#xA0;</td></tr></tbody></table> 
+            <img src="https://go.voyagersopris.com/l/207592/2019-05-03/9g4vq/207592/102171/icons_easy.png" class="passport-icons small-float-center" alt="easy 30-minute daily lessons" width="125">
+        </th></tr></table></th>
+        <th class="no-bottom-padding small-12 large-3 columns last"><table><tr><th>
+            <img src="https://go.voyagersopris.com/l/207592/2019-05-03/9g4vs/207592/102173/icons_explicit.png" class="passport-icons small-float-center" alt="explicit instruction icon" width="125">
+            <table class="spacer"><tbody><tr><td height="20px" style="font-size:20px;line-height:20px;">&#xA0;</td></tr></tbody></table> 
+            <img src="https://go.voyagersopris.com/l/207592/2019-05-03/9g4vn/207592/102169/icons_formative.png" class="passport-icons small-float-center" alt="formative assessments" width="125">
+        </th></tr></table></th>
+    </tr></tbody></table>
+
+    <table class="row"><tbody><tr>
+        <th class="no-bottom-padding small-12 large-12 columns first last"><table><tr><th>
+            <h3></h3>
+            <table class="spacer"><tbody><tr><td height="10px" style="font-size:10px;line-height:10px;">&#xA0;</td></tr></tbody></table> 
+            <center data-parsed=""><table class="button radius warning expanded float-center"><tr><td><table><tr><td><center data-parsed=""><a href="https://www.voyagersopris.com/literacy/voyager-passport/contact-sales/?utm_source=news&amp;utm_medium=email&amp;utm_campaign=passport_launch" align="center" class="float-center"><strong>Watch your students soar with the updated<br><em>Voyager
+                            Passport</em> as part of your fall curriculum &raquo;</strong></a></center></td></tr></table></td>
+<td class="expander"></td></tr></table></center>
         </th>
 <th class="expander"></th></tr></table></th>
     </tr></tbody></table>
-    <table class="row"><tbody><tr>
-        <th class="small-12 large-7 columns first"><table><tr><th>
-
-                <h2>Ready for Take Off? We’re Your Literacy Partner</h2>
-                <p><em>Voyager Passport</em> targets the priority skills and strategies learners need to be fluent, on-level readers.</p>
-                <ul>
-                    <li>Teaches five components of reading</li>
-                    <li>Provides language and writing support</li>
-                </ul>
-
-        </th></tr></table></th>
-        <th class="cta-box small-12 large-5 columns last"><table><tr><th>
-           <h3>Schedule a presentation now and learn how you 
-            can help your K–5 students achieve new levels of literacy success!</h3>
-            <center data-parsed=""><table class="button radius warning expanded float-center"><tr><td><table><tr><td><center data-parsed=""><a href="https://www.voyagersopris.com/literacy/voyager-passport/contact-sales/?utm_source=news&amp;utm_medium=email&amp;utm_campaign=passport_launch" align="center" class="float-center"><strong>SCHEDULE NOW »</strong></a></center></td></tr></table></td>
-<td class="expander"></td></tr></table></center>
-        </th></tr></table></th>
-    </tr></tbody></table>
-
 
     <table class="row footer"><tbody><tr>
         <th class="small-12 large-6 columns first"><table><tr><th>
