--- a/scratch.html
+++ b/scratch.html
@@ -29,16 +29,28 @@
 </head>
 
 <body>
-    <center data-parsed="">
-        <h3 align="center" class="float-center">EVIDENCE BASED</h3>
-        <p align="center" class="float-center"><em>LETRS</em> is validated by numerous studies that show improvement in instruction and student achievement
-            and has an <a style="text-decoration:underline;" href="https://www.voyagersopris.com/docs/default-source/essa/essa_flyer_letrs_2019_final.pdf?sfvrsn=232e2039_2">ESSA evidence</a> level of Promising.</p>
-        <p align="center" class="float-center"><a class="btn btn-primary" href="http://go.voyagersopris.com/rel-study" target="_blank"><em>LETRS</em> REL
-                study</a>&nbsp;&nbsp;&nbsp;<a class="btn btn-primary" href="https://www.voyagersopris.com/docs/default-source/professional-development/letrs/letrs_research_base5da2b086f4ea4df4927824d48770c522.pdf?sfvrsn=14ce0007_2" target="_blank"><em>LETRS</em> Research Base</a>&nbsp;&nbsp;&nbsp;<a class="btn btn-primary" href="https://www.voyagersopris.com/docs/default-source/professional-development/letrs/letrs_top-10-white-paper_8-31-18.pdf?sfvrsn=4233f285_2" target="_blank"><em>LETRS</em> White Paper</a> </p>
-    </center>
+    <h2>Why <em>Step Up to Writing</em>?</h2>
+<p>Implementing <em>Step Up to Writing</em> in every grade establishes a common writing approach across grade levels and content areas. This writing program provides:
+</p>
+<ul>
+    <li>Multimodal instruction/Differentiation</li><a href="https://www.voyagersopris.com/docs/default-source/essa/essa_flyer_sutw_2019_final.pdf?sfvrsn=33290817_2"><img alt="ESSA-seal-web" height="181" src="https://www.voyagersopris.com/images/default-source/logos/essa-seal-web.png?sfvrsn=13ccef7c_2" style="float:right;" width="180"></a>
+    <li>Flexible implementation options
+    </li>
+    <li>Compatibility with <strong><em>any</em></strong> core curriculum
+    </li>
+    <li>Support for writing instruction across all content areas
+    </li>
+    <li>A full body of proven writing strategies
+    </li>
+    <li><a href="https://www.voyagersopris.com/docs/default-source/essa/essa_flyer_sutw_2019_final.pdf?sfvrsn=33290817_2" style="text-decoration:underline;">ESSA evidence</a> level: Demonstrates a Rationale</li>
+</ul>
+<p><a class="card-link" href="http://go.voyagersopris.com/website/sutw-overview" target="_blank" title="PROGRAM OVERVIEW PDF">PROGRAM OVERVIEW PDF</a></p>
 </body>
 
 </html>
+
+<a style="text-decoration:underline;" href="https://www.voyagersopris.com/docs/default-source/essa/essa_flyer_vmath_2019_final.pdf?sfvrsn=11894b7d_2" align="center" class="float-center"></a>
+<a href="https://www.voyagersopris.com/docs/default-source/essa/essa_flyer_vmath_2019_final.pdf?sfvrsn=11894b7d_2" align="center" class="float-center"></a>
 
 			</center>
 		</td>
