--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <table align="center" class="container float-center"><tbody><tr><td>
     <table pardot-repeatable="" class="row collapse"><tbody><tr>
         <th class="no-bottom-padding small-12 large-12 columns first last" pardot-region="header_image"><table><tr><th>
-            <a href="https://www.voyagersopris.com/literacy/voyager-passport/contact-sales?utm_source=news&amp;utm_medium=email&amp;utm_campaign=passport_launch"><img src="assets/img/passport-non-customer-banner-7-19.jpg" width="600" style="font-size: 24px;line-height:30px;background-color:#009bdf;color:#ffffff;text-align:center;" alt=""></a>
+            <a href="https://www.voyagersopris.com/literacy/voyager-passport/contact-sales?utm_source=news&amp;utm_medium=email&amp;utm_campaign=passport_launch"><img src="assets/img/passport-non-customer-banner.jpg" width="600" style="font-size: 24px;line-height:30px;background-color:#009bdf;color:#ffffff;text-align:center;" alt=""></a>
         </th></tr></table></th>
     </tr></tbody></table>
 
@@ -49,7 +49,7 @@
 <th class="expander"></th></tr></table></th>
     </tr></tbody></table>
     <table class="row"><tbody><tr>
-        <th class="small-12 large-7 columns first"><table><tr><th>
+        <th class="small-12 large-12 columns first last"><table><tr><th>
 
                 <h2>Ready for Take Off? We’re Your Literacy Partner</h2>
                 <p><em>Voyager Passport</em> targets the priority skills and strategies learners need to be fluent, on-level readers.</p>
@@ -58,15 +58,17 @@
                     <li>Provides language and writing support</li>
                 </ul>
 
-        </th></tr></table></th>
-        <th class="cta-box small-12 large-5 columns last"><table><tr><th>
-           <h3>Schedule a presentation now and learn how you 
-            can help your K–5 students achieve new levels of literacy success!</h3>
-            <center data-parsed=""><table class="button radius warning expanded float-center"><tr><td><table><tr><td><center data-parsed=""><a href="https://www.voyagersopris.com/literacy/voyager-passport/contact-sales/?utm_source=news&amp;utm_medium=email&amp;utm_campaign=passport_launch" align="center" class="float-center"><strong>SCHEDULE NOW »</strong></a></center></td></tr></table></td>
-<td class="expander"></td></tr></table></center>
-        </th></tr></table></th>
+        </th>
+<th class="expander"></th></tr></table></th>
     </tr></tbody></table>
-
+    <table class="row"><tbody><tr>
+        <th class="small-12 large-12 columns first last"><table><tr><th>
+            <center data-parsed=""><table class="button radius warning expanded float-center"><tr><td><table><tr><td><center data-parsed=""><a href="https://www.voyagersopris.com/literacy/voyager-passport/contact-sales/?utm_source=news&amp;utm_medium=email&amp;utm_campaign=passport_launch" align="center" class="float-center"><strong>HELP YOUR K–5 STUDENTS ACHIEVE NEW LEVELS OF LITERACY SUCCESS
+                    »</strong></a></center></td></tr></table></td>
+<td class="expander"></td></tr></table></center>
+        </th>
+<th class="expander"></th></tr></table></th>
+    </tr></tbody></table>
 
     <table class="row footer"><tbody><tr>
         <th class="small-12 large-6 columns first"><table><tr><th>
