--- a/index.html
+++ b/index.html
@@ -45,26 +45,22 @@
         <th class="small-12 large-12 columns first last"><table><tr><th>
             <p>As you begin a new school year and learn each student’s strengths, you’ll encounter those who struggle to
                 read... and you’ll no doubt ask yourself how you can best help turn that struggle into success. </p>
-        </th>
-<th class="expander"></th></tr></table></th>
-    </tr></tbody></table>
-    <table class="row"><tbody><tr>
-        <th class="small-12 large-12 columns first last"><table><tr><th>
-
-                <h2>Ready for Take Off? We’re Your Literacy Partner</h2>
-                <p><em>Voyager Passport</em> targets the priority skills and strategies learners need to be fluent, on-level readers.</p>
-                <ul>
-                    <li>Teaches five components of reading</li>
-                    <li>Provides language and writing support</li>
-                </ul>
+            <h2>Ready for Take Off? We’re Your Literacy Partner</h2>
+            <p><em>Voyager Passport</em> targets the priority skills and strategies learners need to be fluent, on-level
+                readers.</p>
+            <ul>
+                <li>Teaches five components of reading</li>
+                <li>Provides language and writing support</li>
+            </ul>
 
         </th>
 <th class="expander"></th></tr></table></th>
     </tr></tbody></table>
     <table class="row"><tbody><tr>
         <th class="small-12 large-12 columns first last"><table><tr><th>
-            <center data-parsed=""><table class="button radius warning expanded float-center"><tr><td><table><tr><td><center data-parsed=""><a href="https://www.voyagersopris.com/literacy/voyager-passport/contact-sales/?utm_source=news&amp;utm_medium=email&amp;utm_campaign=passport_launch" align="center" class="float-center"><strong>HELP YOUR K–5 STUDENTS ACHIEVE NEW LEVELS OF LITERACY SUCCESS
-                    »</strong></a></center></td></tr></table></td>
+            <center data-parsed=""><table class="button radius warning expanded float-center"><tr><td><table><tr><td><center data-parsed=""><a href="https://www.voyagersopris.com/literacy/voyager-passport/contact-sales/?utm_source=news&amp;utm_medium=email&amp;utm_campaign=passport_launch" align="center" class="float-center"><strong>HELP YOUR K–5 STUDENTS ACHIEVE NEW LEVELS OF LITERACY
+                        SUCCESS
+                        »</strong></a></center></td></tr></table></td>
 <td class="expander"></td></tr></table></center>
         </th>
 <th class="expander"></th></tr></table></th>
