--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 	<meta name="format-detection" content="date=no">
 	<meta name="format-detection" content="address=no">
 	<meta name="format-detection" content="email=no">
-	<title>Subject line</title>
+	<title>PASSPORT FALL EMAIL 1 ALL AUDIENCES</title>
 	<!-- <style> -->
 </head>
 <body>
-<span class="invisible-previewline">THE JOURNEY MATTERS. PACK FOR IT.</span>
+<span class="invisible-previewline">PASSPORT FALL EMAIL 1 ALL AUDIENCES</span>
 <table class="body">
 	<tr>
 		<td class="center" align="center" valign="top">
@@ -35,7 +35,7 @@
             <h1> Give your students everything<br class="hide-hardbreak"> they need in just <span class="emphasize">30
                     MINUTES A DAY</span>.</h1>
             <table class="spacer"><tbody><tr><td height="10px" style="font-size:10px;line-height:10px;">&#xA0;</td></tr></tbody></table> 
-            <center data-parsed=""><table class="button radius warning expanded float-center"><tr><td><table><tr><td><center data-parsed=""><a href="https://www.voyagersopris.com/literacy/voyager-passport/contact-sales/?utm_source=news&amp;utm_medium=email&amp;utm_campaign=passport_launch" align="center" class="float-center"><strong>SCHEDULE A PRESENTATION BY AUGUST 31 AND GET 10% OFF
+            <center data-parsed=""><table class="button radius warning expanded float-center"><tr><td><table><tr><td><center data-parsed=""><a href="https://www.voyagersopris.com/literacy/voyager-passport/contact-sales/?utm_source=news&amp;utm_medium=email&amp;utm_campaign=passport_launch" align="center" class="float-center"><strong>SCHEDULE A PRESENTATION BY 11/1 AND GET 10% OFF
                         »</strong></a></center></td></tr></table></td>
 <td class="expander"></td></tr></table></center>
         </th>
