--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 	<meta name="format-detection" content="date=no">
 	<meta name="format-detection" content="address=no">
 	<meta name="format-detection" content="email=no">
-	<title>PASSPORT FALL EMAIL 1 ALL AUDIENCES</title>
+	<title>Preview the Updated Voyager Passport and get 10% off now!</title>
 	<!-- <style> -->
 </head>
 <body>
-<span class="invisible-previewline">PASSPORT FALL EMAIL 1 ALL AUDIENCES</span>
+<span class="invisible-previewline">For students who struggle to read, Updated Passport can be their ticket to literacy success</span>
 <table class="body">
 	<tr>
 		<td class="center" align="center" valign="top">
@@ -66,19 +66,22 @@
 <th class="expander"></th></tr></table></th>
     </tr></tbody></table>
 
-    <table class="row footer"><tbody><tr>
-        <th class="small-12 large-6 columns first"><table><tr><th>
-            <table class="spacer"><tbody><tr><td height="16px" style="font-size:16px;line-height:16px;">&#xA0;</td></tr></tbody></table> 
-            <a href="http://www.voyagersopris.com?utm_source=news&amp;utm_medium=email&amp;utm_campaign=passport_launch" target="_blank" title="http://www.voyagersopris.com?utm_source=news&amp;utm_medium=email&amp;utm_campaign=passport_launch"><img src="http://go.voyagersopris.com/l/207592/2017-09-08/69hvv/207592/33471/vsp_logo_white_email__2x.png" height="40" width="215" class="vsl-logo"></a>
-        </th></tr></table></th>
-        <th class="small-12 large-6 columns last"><table><tr><th>
-            <table class="spacer"><tbody><tr><td height="16px" style="font-size:16px;line-height:16px;">&#xA0;</td></tr></tbody></table> 
-            <p class="text-right">&copy;2019 Voyager Sopris Learning.<br> All Rights Reserved.<br> 17855 Dallas
-                Parkway, Dallas, TX 75287<br>
-                <a href="http://www.voyagersopris.com?utm_source=news&amp;utm_medium=email&amp;utm_campaign=passport_launch" target="_blank">voyagersopris.com</a> / <a href="tel:18005476747" target="_blank" title="Call Voyager Sopris Learning">800.547.6747</a>
-            </p>
-        </th></tr></table></th>
-    </tr></tbody></table>
+
+
+<table dir="rtl" class="row footer"><tbody><tr>
+    <th class="no-bottom-padding small-12 large-6 columns first" valign="middle"><table><tr><th>
+        <table class="spacer"><tbody><tr><td height="16px" style="font-size:16px;line-height:16px;">&#xA0;</td></tr></tbody></table> 
+        <a href="https://www.voyagersopris.com?utm_source=news&amp;utm_medium=email&amp;utm_campaign=CAMPAIGN_NAME" target="_blank" title="https://www.voyagersopris.com?utm_source=news&amp;utm_medium=email&amp;utm_campaign=CAMPAIGN_NAME"><img src="https://go.voyagersopris.com/l/207592/2019-07-18/9r372/207592/112595/VSL_logo_stacked_white.png" height="65" width="154" class="vsl-logo float-right small-float-center"></a>
+        <table class="spacer"><tbody><tr><td height="16px" style="font-size:16px;line-height:16px;">&#xA0;</td></tr></tbody></table> 
+    </th></tr></table></th>
+    <th class="address-cell small-12 large-6 columns last" dir="ltr" pardot-region="footer" valign="middle"><table><tr><th>
+        <table class="spacer"><tbody><tr><td height="16px" style="font-size:16px;line-height:16px;">&#xA0;</td></tr></tbody></table> 
+        <p class="no-bottom-margin">&copy; 2019 Voyager Sopris Learning.<br> All Rights Reserved.<br> 17855 Dallas
+            Parkway, Dallas, TX 75287<br>
+            <a href="https://www.voyagersopris.com?utm_source=news&amp;utm_medium=email&amp;utm_campaign=CAMPAIGN_NAME" target="_blank">voyagersopris.com</a> / <a href="tel:18005476747" target="_blank" title="Call Voyager Sopris Learning">800.547.6747</a>
+        </p>
+    </th></tr></table></th>
+</tr></tbody></table>
     <table class="row"><tbody><tr>
         <th class="social-media small-12 large-12 columns first last"><table><tr><th>
             <table class="spacer"><tbody><tr><td height="10px" style="font-size:10px;line-height:10px;">&#xA0;</td></tr></tbody></table> 
@@ -100,6 +103,10 @@
 <th class="expander"></th></tr></table></th>
     </tr></tbody></table>
 </td></tr></tbody></table>
+
+
+<div class="preview-subject float-center" align="center">- FOR PREVIEW PURPOSES ONLY -<br><strong>SUBJECT:</strong> Preview the Updated Voyager Passport and get 10% off now!<br><strong>HIDDEN
+        TEASER:</strong> For students who struggle to read, Updated Passport can be their ticket to literacy success</div>
 
 			</center>
 		</td>
