--- a/index.html
+++ b/index.html
@@ -25,15 +25,16 @@
 <table align="center" class="container float-center"><tbody><tr><td>
     <table pardot-repeatable="" class="row collapse"><tbody><tr>
         <th class="no-bottom-padding small-12 large-12 columns first last" pardot-region="header_image"><table><tr><th>
-            <a href="https://www.voyagersopris.com/literacy/voyager-passport/contact-sales?utm_source=news&amp;utm_medium=email&amp;utm_campaign=passport_launch"><img src="assets/img/passport-non-customer-banner.jpg" width="600" style="font-size: 24px;line-height:30px;background-color:#009bdf;color:#ffffff;text-align:center;" alt=""></a>
+            <a href="https://www.voyagersopris.com/literacy/voyager-passport/contact-sales?utm_source=news&amp;utm_medium=email&amp;utm_campaign=passport_launch"><img src="../assets/img/passport-non-customer-banner-7-30.jpg" width="600" style="font-size: 24px;line-height:30px;background-color:#009bdf;color:#ffffff;text-align:center;" alt=""></a>
         </th></tr></table></th>
     </tr></tbody></table>
+
 
     <table pardot-repeatable="" class="row"><tbody><tr>
         <th class="small-12 large-12 columns first last" pardot-region="body_copy"><table><tr><th>
 
-            <h1> Give your students everything<br class="hide-hardbreak"> they need in just <span class="emphasize">30
-                    MINUTES A DAY</span>.</h1>
+            <h1><em><strong>Voyager Passport</strong></em><sup>&reg;</sup> is packed with the essentials you need to
+                teach reading.</h1>
             <table class="spacer"><tbody><tr><td height="10px" style="font-size:10px;line-height:10px;">&#xA0;</td></tr></tbody></table> 
             <center data-parsed=""><table class="button radius warning expanded float-center"><tr><td><table><tr><td><center data-parsed=""><a href="https://www.voyagersopris.com/literacy/voyager-passport/contact-sales/?utm_source=news&amp;utm_medium=email&amp;utm_campaign=passport_launch" align="center" class="float-center"><strong>SCHEDULE A PRESENTATION BY 11/1 AND GET 10% OFF
                         »</strong></a></center></td></tr></table></td>
@@ -43,45 +44,33 @@
     </tr></tbody></table>
     <table class="row"><tbody><tr>
         <th class="small-12 large-12 columns first last"><table><tr><th>
-            <p>As you begin a new school year and learn each student’s strengths, you’ll encounter those who struggle to
-                read... and you’ll no doubt ask yourself how you can best help turn that struggle into success. </p>
-            <h2>Ready for Take Off? We’re Your Literacy Partner</h2>
-            <p><em>Voyager Passport</em> targets the priority skills and strategies learners need to be fluent, on-level
-                readers.</p>
-            <ul>
-                <li>Teaches five components of reading</li>
-                <li>Provides language and writing support</li>
-            </ul>
 
-        </th>
-<th class="expander"></th></tr></table></th>
-    </tr></tbody></table>
-    <table class="row"><tbody><tr>
-        <th class="small-12 large-12 columns first last"><table><tr><th>
-            <center data-parsed=""><table class="button radius warning expanded float-center"><tr><td><table><tr><td><center data-parsed=""><a href="https://www.voyagersopris.com/literacy/voyager-passport/contact-sales/?utm_source=news&amp;utm_medium=email&amp;utm_campaign=passport_launch" align="center" class="float-center"><strong>HELP YOUR K–5 STUDENTS ACHIEVE NEW LEVELS OF LITERACY
-                        SUCCESS
-                        »</strong></a></center></td></tr></table></td>
-<td class="expander"></td></tr></table></center>
+            <p> Help your struggling K–5 students reach new heights of literacy success based on decades of literacy
+                research. </p>
+            <p> <em><strong>Voyager Passport</strong></em> strategically targets priority reading skills to accelerate
+                the performance of students reading below grade level. </p>
+            <p> <a href="https://www.voyagersopris.com/literacy/voyager-passport/contact-sales/?utm_source=news&amp;utm_medium=email&amp;utm_campaign=passport_launch">Schedule a presentation today</a>. </p>
         </th>
 <th class="expander"></th></tr></table></th>
     </tr></tbody></table>
 
 
 
-<table dir="rtl" class="row footer"><tbody><tr>
-    <th class="no-bottom-padding small-12 large-6 columns first" valign="middle"><table><tr><th>
-        <table class="spacer"><tbody><tr><td height="16px" style="font-size:16px;line-height:16px;">&#xA0;</td></tr></tbody></table> 
-        <a href="https://www.voyagersopris.com?utm_source=news&amp;utm_medium=email&amp;utm_campaign=CAMPAIGN_NAME" target="_blank" title="https://www.voyagersopris.com?utm_source=news&amp;utm_medium=email&amp;utm_campaign=CAMPAIGN_NAME"><img src="https://go.voyagersopris.com/l/207592/2019-07-18/9r372/207592/112595/VSL_logo_stacked_white.png" height="65" width="154" class="vsl-logo float-right small-float-center"></a>
-        <table class="spacer"><tbody><tr><td height="16px" style="font-size:16px;line-height:16px;">&#xA0;</td></tr></tbody></table> 
-    </th></tr></table></th>
-    <th class="address-cell small-12 large-6 columns last" dir="ltr" pardot-region="footer" valign="middle"><table><tr><th>
-        <table class="spacer"><tbody><tr><td height="16px" style="font-size:16px;line-height:16px;">&#xA0;</td></tr></tbody></table> 
-        <p class="no-bottom-margin">&copy; 2019 Voyager Sopris Learning.<br> All Rights Reserved.<br> 17855 Dallas
-            Parkway, Dallas, TX 75287<br>
-            <a href="https://www.voyagersopris.com?utm_source=news&amp;utm_medium=email&amp;utm_campaign=CAMPAIGN_NAME" target="_blank">voyagersopris.com</a> / <a href="tel:18005476747" target="_blank" title="Call Voyager Sopris Learning">800.547.6747</a>
-        </p>
-    </th></tr></table></th>
-</tr></tbody></table>
+
+    <table dir="rtl" class="row footer"><tbody><tr>
+        <th class="no-bottom-padding small-12 large-6 columns first" valign="middle"><table><tr><th>
+            <table class="spacer"><tbody><tr><td height="16px" style="font-size:16px;line-height:16px;">&#xA0;</td></tr></tbody></table> 
+            <a href="https://www.voyagersopris.com?utm_source=news&amp;utm_medium=email&amp;utm_campaign=CAMPAIGN_NAME" target="_blank" title="https://www.voyagersopris.com?utm_source=news&amp;utm_medium=email&amp;utm_campaign=CAMPAIGN_NAME"><img src="https://go.voyagersopris.com/l/207592/2019-07-18/9r372/207592/112595/VSL_logo_stacked_white.png" height="65" width="154" class="vsl-logo float-right small-float-center"></a>
+            <table class="spacer"><tbody><tr><td height="16px" style="font-size:16px;line-height:16px;">&#xA0;</td></tr></tbody></table> 
+        </th></tr></table></th>
+        <th class="address-cell small-12 large-6 columns last" dir="ltr" pardot-region="footer" valign="middle"><table><tr><th>
+            <table class="spacer"><tbody><tr><td height="16px" style="font-size:16px;line-height:16px;">&#xA0;</td></tr></tbody></table> 
+            <p class="no-bottom-margin">&copy; 2019 Voyager Sopris Learning.<br> All Rights Reserved.<br> 17855 Dallas
+                Parkway, Dallas, TX 75287<br>
+                <a href="https://www.voyagersopris.com?utm_source=news&amp;utm_medium=email&amp;utm_campaign=CAMPAIGN_NAME" target="_blank">voyagersopris.com</a> / <a href="tel:18005476747" target="_blank" title="Call Voyager Sopris Learning">800.547.6747</a>
+            </p>
+        </th></tr></table></th>
+    </tr></tbody></table>
     <table class="row"><tbody><tr>
         <th class="social-media small-12 large-12 columns first last"><table><tr><th>
             <table class="spacer"><tbody><tr><td height="10px" style="font-size:10px;line-height:10px;">&#xA0;</td></tr></tbody></table> 
