Add latest revisions

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 	<meta name="format-detection" content="date=no">
 	<meta name="format-detection" content="address=no">
 	<meta name="format-detection" content="email=no">
-	<title>Preview the Updated Voyager Passport and get 10% off now!</title>
+	<title>Preview the Updated Voyager Passport and Get 10% Off Now!</title>
 	<!-- <style> -->
 </head>
 <body>
-<span class="invisible-previewline">For students who struggle to read, Updated Passport can be their ticket to literacy success</span>
+<span class="invisible-previewline">For students who struggle to read, Updated Passport can be their ticket to literacy success.</span>
 <table class="body">
 	<tr>
 		<td class="center" align="center" valign="top">
@@ -25,11 +25,9 @@
 <table align="center" class="container float-center"><tbody><tr><td>
     <table pardot-repeatable="" class="row collapse"><tbody><tr>
         <th class="no-bottom-padding small-12 large-12 columns first last" pardot-region="header_image"><table><tr><th>
-            <a href="https://www.voyagersopris.com/literacy/voyager-passport/contact-sales?utm_source=news&amp;utm_medium=email&amp;utm_campaign=passport_launch"><img src="assets/img/passport-non-customer-banner-7-30.jpg" width="600" style="font-size: 24px;line-height:30px;background-color:#009bdf;color:#ffffff;text-align:center;" alt=""></a>
+            <a href="https://www.voyagersopris.com/literacy/voyager-passport/contact-sales?utm_source=news&amp;utm_medium=email&amp;utm_campaign=passport_launch"><img src="assets/img/passport-non-customer-banner-7-30-2.jpg" width="600" style="font-size: 24px;line-height:30px;background-color:#009bdf;color:#ffffff;text-align:center;" alt=""></a>
         </th></tr></table></th>
     </tr></tbody></table>
-
-
     <table pardot-repeatable="" class="row"><tbody><tr>
         <th class="small-12 large-12 columns first last" pardot-region="body_copy"><table><tr><th>
 
@@ -46,17 +44,14 @@
         <th class="small-12 large-12 columns first last"><table><tr><th>
 
             <p> Help your struggling K–5 students reach new heights of literacy success based on decades of literacy
-                research. </p>
-            <p> <em><strong>Voyager Passport</strong></em> strategically targets priority reading skills to accelerate
+                research.
+            <em><strong>Voyager Passport</strong></em> strategically targets priority reading skills to accelerate
                 the performance of students reading below grade level. </p>
-            <p> <a href="https://www.voyagersopris.com/literacy/voyager-passport/contact-sales/?utm_source=news&amp;utm_medium=email&amp;utm_campaign=passport_launch">Schedule a presentation today</a>. </p>
+                <p>This reading intervention program provides comprehensive, explicit, and systematic instruction in the five essential components of reading and includes language and writing—in just 30 minutes of instruction per day.</p>
+            <p class="text-center"> <a href="https://www.voyagersopris.com/literacy/voyager-passport/contact-sales/?utm_source=news&amp;utm_medium=email&amp;utm_campaign=passport_launch"><strong>SCHEDULE A PRESENTATION TODAY</strong></a>. </p>
         </th>
 <th class="expander"></th></tr></table></th>
     </tr></tbody></table>
-
-
-
-
     <table dir="rtl" class="row footer"><tbody><tr>
         <th class="no-bottom-padding small-12 large-6 columns first" valign="middle"><table><tr><th>
             <table class="spacer"><tbody><tr><td height="16px" style="font-size:16px;line-height:16px;">&#xA0;</td></tr></tbody></table> 
@@ -94,8 +89,8 @@
 </td></tr></tbody></table>
 
 
-<div class="preview-subject float-center" align="center">- FOR PREVIEW PURPOSES ONLY -<br><strong>SUBJECT:</strong> Preview the Updated Voyager Passport and get 10% off now!<br><strong>HIDDEN
-        TEASER:</strong> For students who struggle to read, Updated Passport can be their ticket to literacy success</div>
+<div class="preview-subject float-center" align="center">- FOR PREVIEW PURPOSES ONLY -<br><strong>SUBJECT:</strong> Preview the Updated Voyager Passport and Get 10% Off Now!<br><strong>HIDDEN
+        TEASER:</strong> For students who struggle to read, Updated Passport can be their ticket to literacy success.</div>
 
 			</center>
 		</td>
