--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <table class="spacer"><tbody><tr><td height="16px" style="font-size:16px;line-height:16px;">&#xA0;</td></tr></tbody></table> 
             <img src="assets/img/voyager-passport-logo.png" width="200" height="70" class="product-logo" alt="voyager passport logo">
             <table class="spacer"><tbody><tr><td height="10px" style="font-size:10px;line-height:10px;">&#xA0;</td></tr></tbody></table> 
-            <h1>The K&ndash;reading intervention program with the highest ESSA rating: <strong>Tier
+            <h1>The K&ndash;5 reading intervention program with the highest ESSA rating: <strong>Tier
                     1&ndash;STRONG</strong></h1>
         </th>
 <th class="expander"></th></tr></table></th>
